[tool.poetry]
name        = "my-fastapi-service"
version     = "0.1.0"
description = "FastAPI with Prometheus"
authors     = ["Maxim <you@example.com>"]
license     = "MIT"
readme      = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111"
uvicorn = "^0.29"
prometheus-fastapi-instrumentator = "^6.1"

pydantic = "^2.8"
python-dotenv = "^1.0"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest        = "^8.2"
pytest-asyncio = "^0.23"
ruff          = "^0.4"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
